Separate deploy actions

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to S3
+name: Deploy to Dev S3
 
 on:
   push:
     branches:
-      - main  # Change this to your default branch if different
+      - dev  # Change this to your default branch if different
 
 jobs:
   deploy:
@@ -33,12 +33,12 @@ jobs:
           
       - name: Deploy to S3
         run: |
-          aws s3 sync ./dist s3://${{ secrets.S3_BUCKET }} --delete
+          aws s3 sync ./dist s3://${{ secrets.DEV_S3_BUCKET }} --delete
 
       - name: Invalidate CloudFront
         uses: chetan/invalidate-cloudfront-action@v2
         env:
-          DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
+          DISTRIBUTION: ${{ secrets.DEV_DISTRIBUTION }}
           PATHS: "/index.html"
           AWS_REGION: "us-east-1"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
